deploy/k8s/backgroundtasks.yaml
kind: ConfigMap
apiVersion: v1
metadata:
  name: backgroundtasks-cm
  namespace: eshop
  labels:
    app: eshop
    service: backgroundtasks
data:
  OrchestratorType: K8S
  ASPNETCORE_ENVIRONMENT: Development
  ASPNETCORE_URLS: http://0.0.0.0:80
  ConnectionString: Server=sqldata;Database=Microsoft.eShopOnContainers.Services.OrderingDb;User Id=sa;Password=Pass@word
  UseCustomizationData: "True"
  CheckUpdateTime: "15000"
  GracePeriodTime: "15"
  Serilog__MinimumLevel__Override__Microsoft.eShopOnContainers.BuildingBlocks.EventBusRabbitMQ: Verbose

---

kind: Deployment
apiVersion: apps/v1
metadata:
  name: backgroundtasks
  namespace: eshop
  labels:
    app: eshop
    service: backgroundtasks
spec:
  replicas: 1
  selector:
    matchLabels:
      service: backgroundtasks
  template:
    metadata:
      labels:
        app: eshop
        service: backgroundtasks
      annotations:
        dapr.io/enabled: "true"
        dapr.io/app-id: "backgroundtasks"
        dapr.io/app-port: "80"
        dapr.io/config: "dapr-config"
    spec:
      containers:
        - name: ordering-backgroundtasks
          image: eshop/ordering.backgroundtasks:linux-latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          envFrom:
            - configMapRef:
                name: backgroundtasks-cm

---

apiVersion: v1
kind: Service
metadata:
  name: ordering-backgroundtasks
  namespace: eshop
  labels:
    app: eshop
    service: backgroundtasks
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30006
      protocol: TCP
      name: http
  selector:
    service: backgroundtasks
