deploy/k8s/basket.yaml
kind: ConfigMap
apiVersion: v1
metadata:
  name: basket-cm
  namespace: eshop
  labels:
    app: eshop
    service: basket
data:
  ASPNETCORE_ENVIRONMENT: Development
  ASPNETCORE_URLS: http://0.0.0.0:80
  IdentityUrl: http://identity-api
  IdentityUrlExternal: http://localhost:30008
  SeqServerUrl: http://seq

---

kind: Deployment
apiVersion: apps/v1
metadata:
  name: basket
  namespace: eshop
  labels:
    app: eshop
    service: basket
spec:
  replicas: 1
  selector:
    matchLabels:
      service: basket
  template:
    metadata:
      labels:
        app: eshop
        service: basket
      annotations:
        dapr.io/enabled: "true"
        dapr.io/app-id: "basket-api"
        dapr.io/app-port: "80"
        dapr.io/config: "dapr-config"
        dapr.io/log-as-json: "true"
    spec:
      containers:
        - name: basket-api
          image: eshopdapr/basket.api:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          envFrom:
            - configMapRef:
                name: basket-cm

---

apiVersion: v1
kind: Service
metadata:
  name: basket-api
  namespace: eshop
  labels:
    app: eshop
    service: basket
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30005
      protocol: TCP
      name: http
  selector:
    service: basket
