deploy/k8s/blazorclient.yaml
kind: ConfigMap
apiVersion: v1
metadata:
  name: blazorclient-cm
  namespace: eshop
  labels:
    app: eshop
    service: blazorclient
data:
  ASPNETCORE_ENVIRONMENT: Development
  ASPNETCORE_URLS: http://0.0.0.0:80

---

kind: Deployment
apiVersion: apps/v1
metadata:
  name: blazorclient
  namespace: eshop
  labels:
    app: eshop
    service: blazorclient
spec:
  replicas: 1
  selector:
    matchLabels:
      service: blazorclient
  template:
    metadata:
      labels:
        app: eshop
        service: blazorclient
    spec:
      containers:
        - name: blazorclient
          image: eshopdapr/blazor.client:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          envFrom:
            - configMapRef:
                name: blazorclient-cm

---

kind: Service
apiVersion: v1
metadata:
  name: blazorclient
  namespace: eshop
  labels:
    app: eshop
    service: blazorclient
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30000
      protocol: TCP
      name: http
  selector:
    service: blazorclient
