deploy/k8s/catalog.yaml
kind: ConfigMap
apiVersion: v1
metadata:
  name: catalog-cm
  namespace: eshop
  labels:
    app: eshop
    service: catalog
data:
  ASPNETCORE_ENVIRONMENT: Development
  ASPNETCORE_URLS: http://0.0.0.0:80
  SeqServerUrl: http://seq
  SqlConnectionString: Server=sqldata;Database=Microsoft.eShopOnDapr.Services.CatalogDb;User Id=sa;Password=Pass@word

---

kind: Deployment
apiVersion: apps/v1
metadata:
  name: catalog
  namespace: eshop
  labels:
    app: eshop
    service: catalog
spec:
  replicas: 1
  selector:
    matchLabels:
      service: catalog
  template:
    metadata:
      labels:
        app: eshop
        service: catalog
      annotations:
        dapr.io/enabled: "true"
        dapr.io/app-id: "catalog-api"
        dapr.io/app-port: "80"
        dapr.io/config: "dapr-config"
        dapr.io/log-as-json: "true"
    spec:
      containers:
        - name: catalog-api
          image: eshopdapr/catalog.api:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              protocol: TCP
            - containerPort: 81
              protocol: TCP
          envFrom:
            - configMapRef:
                name: catalog-cm

---

kind: Service
apiVersion: v1
metadata:
  name: catalog-api
  namespace: eshop
  labels:
    app: eshop
    service: catalog
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30003
      protocol: TCP
      name: http
    - port: 3500
      targetPort: 3500
      nodePort: 30040
      protocol: TCP
      name: dapr-http
    - port: 50001
      targetPort: 50001
      nodePort: 30041
      protocol: TCP
      name: dapr-grpc
  selector:
    service: catalog
