deploy/k8s/identity.yaml
kind: ConfigMap
apiVersion: v1
metadata:
  name: identity-cm
  namespace: eshop
  labels:
    app: eshop
    service: identity
data:
  ASPNETCORE_ENVIRONMENT: Development
  ASPNETCORE_URLS: http://0.0.0.0:80
  SeqServerUrl: http://seq
  SqlConnectionString: Server=sqldata;Database=Microsoft.eShopOnDapr.Service.IdentityDb;User Id=sa;Password=Pass@word
  BlazorClientUrlExternal: http://localhost:30000
  BasketApiUrlExternal: http://localhost:30005
  OrderingApiUrlExternal: http://ordering-api
  ShoppingAggregatorApiUrlExternal: http://webshoppingagg

---

kind: Deployment
apiVersion: apps/v1
metadata:
  name: identity
  namespace: eshop
  labels:
    app: eshop
    service: identity
spec:
  replicas: 1
  selector:
    matchLabels:
      service: identity
  template:
    metadata:
      labels:
        app: eshop
        service: identity
    spec:
      containers:
        - name: identity-api
          image: eshopdapr/identity.api:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          envFrom:
            - configMapRef:
                name: identity-cm

---

kind: Service
apiVersion: v1
metadata:
  name: identity-api
  namespace: eshop
  labels:
    app: eshop
    service: identity
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30008
      protocol: TCP
      name: http
  selector:
    service: identity
