deploy/k8s/nats-streaming.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: stan
  namespace: eshop
  labels:
    app: eshop
    service: stan
spec:
  replicas: 1
  selector:
    matchLabels:
      service: stan
  template:
    metadata:
      labels:
        app: eshop
        service: stan
    spec:
      containers:
        - name: stan
          image: nats-streaming:latest
          args:
            - "--cluster_id=eShopOnDapr"
          imagePullPolicy: IfNotPresent
          ports:
            - name: stan
              containerPort: 4222
              protocol: TCP
            - name: stan-monitoring
              containerPort: 8222
              protocol: TCP
---

kind: Service
apiVersion: v1
metadata:
  name: stan
  namespace: eshop
  labels:
    app: eshop
    service: stan
spec:
  ports:
    - name: stan
      port: 4222
      protocol: TCP
    - name: stan-monitoring
      port: 8222
      protocol: TCP
  selector:
    service: stan
