deploy/k8s/ordering.yaml
kind: ConfigMap
apiVersion: v1
metadata:
  name: ordering-cm
  namespace: eshop
  labels:
    app: eshop
    service: ordering
data:
  CONNECTIONSTRING: "Server=sqldata;Database=Microsoft.eShopOnContainers.Services.OrderingDb;User Id=sa;Password=Pass@word;"
  ASPNETCORE_ENVIRONMENT: Development
  ASPNETCORE_URLS: http://0.0.0.0:80
  CheckUpdateTime: "30000"
  identityUrl: http://identity-api
  OrchestratorType: K8S
  PATH_BASE: /ordering-api
  PORT: "80"
  Serilog__MinimumLevel__Override__ordering.api: Verbose
  UseCustomizationData: "True"

---

kind: Deployment
apiVersion: apps/v1
metadata:
  name: ordering
  namespace: eshop
  labels:
    app: eshop
    service: ordering
spec:
  replicas: 1
  selector:
    matchLabels:
      service: ordering
  template:
    metadata:
      labels:
        app: eshop
        service: ordering
      annotations:
        dapr.io/enabled: "true"
        dapr.io/app-id: "ordering-api"
        dapr.io/app-port: "80"
        dapr.io/config: "dapr-config"
    spec:
      containers:
        - name: ordering-api
          image: eshop/ordering.api:linux-latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          envFrom:
            - configMapRef:
                name: ordering-cm

---

apiVersion: v1
kind: Service
metadata:
  name: ordering-api
  namespace: eshop
  labels:
    app: eshop
    service: ordering
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30002
      protocol: TCP
      name: http
  selector:
    service: ordering
