deploy/k8s/rabbitmq.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: rabbitmq
  namespace: eshop
  labels:
    app: eshop
    service: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      service: rabbitmq
  template:
    metadata:
      labels:
        app: eshop
        service: rabbitmq
    spec:
      containers:
      - name: rabbitmq
        image: rabbitmq:3-management-alpine
        imagePullPolicy: IfNotPresent
        ports:
          - name: http
            containerPort: 5672
            protocol: TCP

---

kind: Service
apiVersion: v1
metadata:
  name: rabbitmq
  namespace: eshop
  labels:
    app: eshop
    service: rabbitmq
spec:
  type: NodePort
  ports:
    - port: 5672
      targetPort: 5672
      nodePort: 32672
      protocol: TCP
      name: rabbitmq
  selector:
    service: rabbitmq
